Fix dark mode dan typing

--- a/style.css
+++ b/style.css
@@ -127,3 +127,76 @@ margin-top:20px;
 text-align:center;
 opacity:.7;
 }
+.typing{
+
+display:flex;
+
+gap:6px;
+
+align-items:center;
+
+padding:8px;
+
+}
+
+.dot{
+
+width:10px;
+
+height:10px;
+
+border-radius:50%;
+
+background:#888;
+
+animation:
+typing
+1s
+infinite;
+
+}
+
+.dot:nth-child(2){
+
+animation-delay:
+0.2s;
+
+}
+
+.dot:nth-child(3){
+
+animation-delay:
+0.4s;
+
+}
+
+@keyframes typing{
+
+0%{
+
+transform:
+translateY(0);
+
+opacity:.5;
+
+}
+
+50%{
+
+transform:
+translateY(-5px);
+
+opacity:1;
+
+}
+
+100%{
+
+transform:
+translateY(0);
+
+opacity:.5;
+
+}
+
+}
